@@ -17,12 +17,9 @@ package org.traccar.database;
 
 import com.mchange.v2.c3p0.ComboPooledDataSource;
 import java.io.File;
+import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.sql.Connection;
-import java.sql.Driver;
-import java.sql.DriverManager;
-import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.Collection;
 import java.util.Date;
@@ -30,18 +27,23 @@ import java.util.HashMap;
 import java.util.Map;
 import javax.naming.InitialContext;
 import javax.sql.DataSource;
+
+import liquibase.Contexts;
+import liquibase.Liquibase;
+import liquibase.database.Database;
+import liquibase.database.DatabaseFactory;
+import liquibase.exception.LiquibaseException;
+import liquibase.resource.FileSystemResourceAccessor;
+import liquibase.resource.ResourceAccessor;
 import org.traccar.Config;
-import org.traccar.helper.DriverDelegate;
 import org.traccar.helper.Log;
 import org.traccar.model.Device;
 import org.traccar.model.MiscFormatter;
 import org.traccar.model.Permission;
 import org.traccar.model.Position;
-import org.traccar.model.Schema;
 import org.traccar.model.Server;
 import org.traccar.model.User;
 import org.traccar.web.AsyncServlet;
-import org.traccar.web.JsonConverter;
 
 public class DataManager implements IdentityManager {
 
@@ -84,22 +86,19 @@ public class DataManager implements IdentityManager {
 
         } else {
 
-            // Load driver
-            String driver = config.getString("database.driver");
-            if (driver != null) {
-                String driverFile = config.getString("database.driverFile");
-
-                if (driverFile != null) {
-                    URL url = new URL("jar:file:" + new File(driverFile).getAbsolutePath() + "!/");
-                    URLClassLoader cl = new URLClassLoader(new URL[]{url});
-                    Driver d = (Driver) Class.forName(driver, true, cl).newInstance();
-                    DriverManager.registerDriver(new DriverDelegate(d));
-                } else {
-                    Class.forName(driver);
-                }
+            String driverFile = config.getString("database.driverFile");
+            if (driverFile != null) {
+                URLClassLoader classLoader = (URLClassLoader) ClassLoader.getSystemClassLoader();
+                Method method = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
+                method.setAccessible(true);
+                method.invoke(classLoader, new File(driverFile).toURI().toURL());
             }
 
-            // Initialize data source
+            String driver = config.getString("database.driver");
+            if (driver != null) {
+                Class.forName(driver);
+            }
+
             ComboPooledDataSource ds = new ComboPooledDataSource();
             ds.setDriverClass(config.getString("database.driver"));
             ds.setJdbcUrl(config.getString("database.url"));
@@ -113,20 +112,12 @@ public class DataManager implements IdentityManager {
                 ds.setMaxPoolSize(maxPoolSize);
             }
             dataSource = ds;
+
         }
     }
 
-    @Override
-    public Device getDeviceById(long id) {
-        return devicesById.get(id);
-    }
-
-    @Override
-    public Device getDeviceByUniqueId(String uniqueId) throws SQLException {
-
-        if (System.currentTimeMillis() - devicesLastUpdate > devicesRefreshDelay
-                || !devicesByUniqueId.containsKey(uniqueId)) {
-
+    private void updateDeviceCache(boolean force) throws SQLException {
+        if (System.currentTimeMillis() - devicesLastUpdate > devicesRefreshDelay || force) {
             devicesById.clear();
             devicesByUniqueId.clear();
             for (Device device : getAllDevices()) {
@@ -135,7 +126,21 @@ public class DataManager implements IdentityManager {
             }
             devicesLastUpdate = System.currentTimeMillis();
         }
+    }
 
+    @Override
+    public Device getDeviceById(long id) {
+        try {
+            updateDeviceCache(!devicesById.containsKey(id));
+        } catch (SQLException e) {
+            Log.warning(e);
+        }
+        return devicesById.get(id);
+    }
+
+    @Override
+    public Device getDeviceByUniqueId(String uniqueId) throws SQLException {
+        updateDeviceCache(!devicesByUniqueId.containsKey(uniqueId));
         return devicesByUniqueId.get(uniqueId);
     }
 
@@ -147,106 +152,29 @@ public class DataManager implements IdentityManager {
         return query;
     }
 
-    private void initDatabaseSchema() throws SQLException {
+    private void initDatabaseSchema() throws SQLException, LiquibaseException {
 
-        if (config.getString("web.type", "new").equals("new") || config.getString("web.type", "new").equals("api")) {
+        if (config.hasKey("database.changelog")) {
 
-            boolean exist = false;
+            ResourceAccessor resourceAccessor = new FileSystemResourceAccessor();
 
-            try (Connection connection = dataSource.getConnection();
-                 ResultSet result = connection.getMetaData().getTables(connection.getCatalog(), null, null, null)) {
+            Database database = DatabaseFactory.getInstance().openDatabase(
+                    config.getString("database.url"),
+                    config.getString("database.user"),
+                    config.getString("database.password"),
+                    null, resourceAccessor);
 
-                String checkTable = config.getString("database.checkTable");
-                while (result.next()) {
-                    if (result.getString("TABLE_NAME").equalsIgnoreCase(checkTable)) {
-                        exist = true;
-                        break;
-                    }
-                }
-            }
+            Liquibase liquibase = new Liquibase(
+                    config.getString("database.changelog"), resourceAccessor, database);
 
-            if (exist) {
-
-                String schemaVersionQuery = getQuery("database.selectSchemaVersion");
-                if (schemaVersionQuery != null) {
-
-                    Schema schema = QueryBuilder.create(dataSource, schemaVersionQuery)
-                            .executeQuerySingle(new Schema());
-
-                    int version = 0;
-                    if (schema != null) {
-                        version = schema.getVersion();
-                    }
-
-                    if (version != 302) {
-                        Log.error("Wrong database schema version (" + version + ")");
-                        throw new RuntimeException();
-                    }
-                }
-
-            } else {
-
-                QueryBuilder.create(dataSource, getQuery("database.createSchema")).executeUpdate();
-
-                User admin = new User();
-                admin.setName("admin");
-                admin.setEmail("admin");
-                admin.setAdmin(true);
-                admin.setPassword("admin");
-                addUser(admin);
-
-                Server server = new Server();
-                server.setRegistration(true);
-                QueryBuilder.create(dataSource, getQuery("database.insertServer"))
-                        .setObject(server)
-                        .executeUpdate();
-
-                mockData(admin.getId());
-
-            }
-        }
-    }
-
-    private void mockData(long userId) {
-        if (config.getBoolean("database.mock")) {
-            try {
-
-                Device device = new Device();
-                device.setName("test1");
-                device.setUniqueId("123456789012345");
-                addDevice(device);
-                linkDevice(userId, device.getId());
-
-                Position position = new Position();
-                position.setDeviceId(device.getId());
-
-                position.setTime(JsonConverter.parseDate("2015-05-22T12:00:01.000Z"));
-                position.setLatitude(-36.8785803);
-                position.setLongitude(174.7281713);
-                addPosition(position);
-
-                position.setTime(JsonConverter.parseDate("2015-05-22T12:00:02.000Z"));
-                position.setLatitude(-36.8870932);
-                position.setLongitude(174.7473116);
-                addPosition(position);
-
-                position.setTime(JsonConverter.parseDate("2015-05-22T12:00:03.000Z"));
-                position.setLatitude(-36.8932371);
-                position.setLongitude(174.7743053);
-                addPosition(position);
-
-                updateLatestPosition(position);
-
-            } catch (SQLException error) {
-                Log.warning(error);
-            }
+            liquibase.update(new Contexts());
         }
     }
 
     public User login(String email, String password) throws SQLException {
         User user = QueryBuilder.create(dataSource, getQuery("database.loginUser"))
                 .setString("email", email)
-                .executeQuerySingle(new User());
+                .executeQuerySingle(User.class);
         if (user != null && user.isPasswordValid(password)) {
             return user;
         } else {
@@ -256,13 +184,13 @@ public class DataManager implements IdentityManager {
 
     public Collection<User> getUsers() throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectUsersAll"))
-                .executeQuery(new User());
+                .executeQuery(User.class);
     }
 
     public User getUser(long userId) throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectUser"))
                 .setLong("id", userId)
-                .executeQuerySingle(new User());
+                .executeQuerySingle(User.class);
     }
 
     public void addUser(User user) throws SQLException {
@@ -282,26 +210,33 @@ public class DataManager implements IdentityManager {
         }
     }
 
+    @Deprecated
     public void removeUser(User user) throws SQLException {
         QueryBuilder.create(dataSource, getQuery("database.deleteUser"))
                 .setObject(user)
                 .executeUpdate();
     }
 
+    public void removeUser(long userId) throws SQLException {
+        QueryBuilder.create(dataSource, getQuery("database.deleteUser"))
+                .setLong("id", userId)
+                .executeUpdate();
+    }
+
     public Collection<Permission> getPermissions() throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.getPermissionsAll"))
-                .executeQuery(new Permission());
+                .executeQuery(Permission.class);
     }
 
     public Collection<Device> getAllDevices() throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectDevicesAll"))
-                .executeQuery(new Device());
+                .executeQuery(Device.class);
     }
 
     public Collection<Device> getDevices(long userId) throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectDevices"))
                 .setLong("userId", userId)
-                .executeQuery(new Device());
+                .executeQuery(Device.class);
     }
 
     public void addDevice(Device device) throws SQLException {
@@ -322,11 +257,19 @@ public class DataManager implements IdentityManager {
                 .executeUpdate();
     }
 
+    @Deprecated
     public void removeDevice(Device device) throws SQLException {
         QueryBuilder.create(dataSource, getQuery("database.deleteDevice"))
                 .setObject(device)
                 .executeUpdate();
         AsyncServlet.sessionRefreshDevice(device.getId());
+    }
+
+    public void removeDevice(long deviceId) throws SQLException {
+        QueryBuilder.create(dataSource, getQuery("database.deleteDevice"))
+                .setLong("id", deviceId)
+                .executeUpdate();
+        AsyncServlet.sessionRefreshDevice(deviceId);
     }
 
     public void linkDevice(long userId, long deviceId) throws SQLException {
@@ -345,16 +288,17 @@ public class DataManager implements IdentityManager {
         AsyncServlet.sessionRefreshUser(userId);
     }
 
-    public Collection<Position> getPositions(long userId, long deviceId, Date from, Date to) throws SQLException {
+    public Collection<Position> getPositions(long deviceId, Date from, Date to) throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectPositions"))
                 .setLong("deviceId", deviceId)
                 .setDate("from", from)
                 .setDate("to", to)
-                .executeQuery(new Position());
+                .executeQuery(Position.class);
     }
 
     public void addPosition(Position position) throws SQLException {
         position.setId(QueryBuilder.create(dataSource, getQuery("database.insertPosition"), true)
+                .setDate("now", new Date())
                 .setObject(position)
                 .setDate("time", position.getFixTime()) // tmp
                 .setLong("device_id", position.getDeviceId()) // tmp
@@ -366,6 +310,7 @@ public class DataManager implements IdentityManager {
 
     public void updateLatestPosition(Position position) throws SQLException {
         QueryBuilder.create(dataSource, getQuery("database.updateLatestPosition"))
+                .setDate("now", new Date())
                 .setObject(position)
                 .setDate("time", position.getFixTime()) // tmp
                 .setLong("device_id", position.getDeviceId()) // tmp
@@ -377,12 +322,12 @@ public class DataManager implements IdentityManager {
 
     public Collection<Position> getLatestPositions() throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectLatestPositions"))
-                .executeQuery(new Position());
+                .executeQuery(Position.class);
     }
 
     public Server getServer() throws SQLException {
         return QueryBuilder.create(dataSource, getQuery("database.selectServers"))
-                .executeQuerySingle(new Server());
+                .executeQuerySingle(Server.class);
     }
 
     public void updateServer(Server server) throws SQLException {
